<resources>
    <string name="app_name">Clinic Translator</string>

    <string name="doc_language_prompt">Choose Doctor\'s Language</string>
    <string name="patient_language_prompt">Choose Patient\'s Language</string>
    <string name="doc_language_label">Doctor\'s Language</string>
    <string name="patient_language_label">Patient\'s Language</string>
    <string-array name="languages_array">
        <item>English</item>
        <item>Hindi</item>
        <item>Afrikaans</item>
        <item>Portuguese</item>
    </string-array>
    <string name="submitLanguage">Go!</string>
    <string name="resetButton">Reset</string>
    <string name="translateButton">Translate</string>
    
    <string-array name="durations_array">
        <item></item>
        <item>less than a day</item>
        <item>1 day</item>
        <item>2 days</item>
        <item>3\-4 days</item>
        <item>5\-7 days</item>
        <item>1\-2 weeks</item>
        <item>2\-4 weeks</item>
        <item>1 month</item>
        <item>2 months</item>
        <item>3 months</item>
        <item>4\-6 months</item>
        <item>7\-12 months</item>
        <item>1 year</item>
        <item>2 years</item>
        <item>3\-5 years</item>
        <item>more than 5 years</item>
    </string-array>

    <string-array name="doctor_responses">
        <item></item>
        <item>How are you feeling today?</item>
        <item>How old are you?</item>
        <item>Since when do you have this problem?</item>
        <item>Please gesture towards the point where you feel the pain.</item>
        <item>What kind of pain are you experiencing?</item>
        <item>Do you have any allergies?</item>
        <item>Open your mouth.</item>
        <item>Stick your tongue out.</item>
        <item>I am prescribing some medicines.</item>
        <item>Take this pill with water after eating.</item>
        <item>Drink more water</item>
        <item>Come back again next week for a follow-up.</item>
        <item>Don't worry, you will get well very soon.</item>
    </string-array>

    <string-array name="patient_responses">
        <item></item>
        <item>Headache</item>
        <item>Stomachache</item>
        <item>Injury</item>
        <item>Cold</item>
        <item>Fever</item>
        <item>Behind the eyes</item>
        <item>On the top of the head</item>
        <item>On the backside of the head</item>
        <item>Forehead</item>
        <item>Temples</item>
        <item>Stabbing pain</item>
        <item>Burning pain</item>
        <item>Throbbing</item>
    </string-array>

</resources>
