<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView_doctorLanguage"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/doc_language_label"
        app:layout_constraintBottom_toTopOf="@+id/spinnerDoctorLanguage"
        app:layout_constraintStart_toStartOf="@+id/spinnerDoctorLanguage" />

    <TextView
        android:id="@+id/textView_patientLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/patient_language_label"
        app:layout_constraintBottom_toTopOf="@+id/spinnerPatientLanguage"
        app:layout_constraintStart_toStartOf="@+id/spinnerPatientLanguage" />

    <Spinner
        android:id="@+id/spinnerDoctorLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:entries="@array/languages_array"
        android:prompt="@string/doc_language_prompt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/spinnerPatientLanguage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.110000014" />

    <Spinner
        android:id="@+id/spinnerPatientLanguage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:entries="@array/languages_array"
        android:prompt="@string/patient_language_prompt"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerDoctorLanguage"
        app:layout_constraintEnd_toStartOf="@+id/goButton"
        app:layout_constraintStart_toEndOf="@+id/spinnerDoctorLanguage"
        app:layout_constraintTop_toTopOf="@+id/spinnerDoctorLanguage" />

    <Button
        android:id="@+id/goButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/submitLanguage"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerPatientLanguage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerPatientLanguage"
        app:layout_constraintTop_toTopOf="@+id/textView_patientLanguage"
        android:onClick="selectLanguage"/>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="7dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toTopOf="@+id/translateButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goButton">

        <LinearLayout
            android:id="@+id/conversationLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/translateButton"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/translateButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />


</android.support.constraint.ConstraintLayout>